--- a/index.html
+++ b/index.html
@@ -9,32 +9,38 @@
 <body>
     <div class="layout">
         <header class="header">
-            <div>
+            <div class="input">
+                <img src="./svg/search.svg" alt="">
                 <input type="search">
             </div>
-            <div>
-                account
+            <div class="account">
+                <img src="./images/spider.jpg" alt="account" class="user">
             </div>
-            <div>name</div>
-            <div>menu</div>
+            <div class="user"><img src="./images/spider.jpg" alt="account" class="user">Carlos S</div>
+            <div class="header-menu">
+                <button>Projects</button><button>Contact</button><button>Share</button>
+            </div>
         </header>
         <div class="sidebar">
-            <div class="logo">Logo</div>
-            <div>
+            <div class="logo">
+                <img src="./svg/cloud-logo.svg" alt="cloud-logo" class="cloud">
+                &lt;CLOUD&gt;
+            </div>
+            <div class="menu-bar">
                 <ul>
-                    <li>Home</li>
-                    <li>Profile</li>
-                    <li>Messages</li>
-                    <li>History</li>
-                    <li>Tasks</li>
-                    <li>Communities</li>
+                    <li><img src="./svg/home.svg" alt="home">HOME</li>
+                    <li><img src="./svg/account.svg" alt="">PROFILE</li>
+                    <li><img src="./svg/message.svg" alt="">MESSAGES</li>
+                    <li><img src="./svg/history.svg" alt="">HISTORY</li>
+                    <li><img src="./svg/trophy.svg" alt="">TASKS</li>
+                    <li><img src="./svg/people.svg" alt="">COMMUNITIES</li>
                 </ul>
             </div>
-            <div>
+            <div class="menu-bar">
                 <ul>
-                    <li>Settings</li>
-                    <li>Support</li>
-                    <li>Privacy</li>
+                    <li><img src="./svg/settings.svg" alt="">Settings</li>
+                    <li><img src="./svg/help.svg" alt="">Support</li>
+                    <li><img src="./svg/privacy.svg" alt="">Privacy</li>
                 </ul>
             </div>
         </div>
