--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             </div>
         </div>
         <main class="container">
-            <div class="one"> This are my projects
+            <div class="one">
+                <div class="one-title">This are my projects</div>
                 <div class="projects">
                     <div>project 1</div>
                     <div>project 2</div>
@@ -55,7 +56,14 @@
                     <div>project 6</div>
                 </div>
             </div>
-            <div class="two">this another sidebar</div>
+            <div class="two">
+                <div>this another sidebar</div>
+                <div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
         </main>
         <footer class="footer">Copyright ©Roobbs</footer>
     </div>
