final design finished

--- a/index.html
+++ b/index.html
@@ -9,38 +9,33 @@
 <body>
     <div class="layout">
         <header class="header">
-            <div class="input">
-                <img src="./svg/search.svg" alt="">
-                <input type="search">
+            <div class="user"><img src="./images/dev.png" alt="account">
+                <div class="user-name">Carlos S.</div>
             </div>
-            <div class="account">
-                <img src="./images/spider.jpg" alt="account" class="user">
-            </div>
-            <div class="user"><img src="./images/spider.jpg" alt="account" class="user">Carlos S</div>
             <div class="header-menu">
                 <button>Projects</button><button>Contact</button><button>Share</button>
             </div>
         </header>
         <div class="sidebar">
             <div class="logo">
-                <img src="./svg/cloud-logo.svg" alt="cloud-logo" class="cloud">
+                <img class="svg" src="./svg/cloud-logo.svg" alt="cloud-logo" class="cloud">
                 &lt;CLOUD&gt;
             </div>
             <div class="menu-bar">
-                <ul>
-                    <li><img src="./svg/home.svg" alt="home">HOME</li>
-                    <li><img src="./svg/account.svg" alt="">PROFILE</li>
-                    <li><img src="./svg/message.svg" alt="">MESSAGES</li>
-                    <li><img src="./svg/history.svg" alt="">HISTORY</li>
-                    <li><img src="./svg/trophy.svg" alt="">TASKS</li>
-                    <li><img src="./svg/people.svg" alt="">COMMUNITIES</li>
+                <ul> Made with:
+                    <li><img class="svg" src="./svg/javascript.svg" alt="home">JavaScript</li>
+                    <li><img class="svg" src="./svg/css.svg" alt="">CSS</li>
+                    <li><img class="svg" src="./svg/html.svg" alt="">HTML</li>
+                    <li><img class="svg" src="./svg/github.svg" alt="">GitHub</li>
+                    <li><img class="svg" src="./svg/vs code.svg" alt="">VS Code</li>
+                    <li><img class="svg" src="./svg/ubuntu.svg" alt="">Ubuntu</li>
                 </ul>
             </div>
             <div class="menu-bar">
                 <ul>
-                    <li><img src="./svg/settings.svg" alt="">Settings</li>
-                    <li><img src="./svg/help.svg" alt="">Support</li>
-                    <li><img src="./svg/privacy.svg" alt="">Privacy</li>
+                    <li><img class="svg" src="./svg/settings.svg" alt="">Settings</li>
+                    <li><img class="svg" src="./svg/help.svg" alt="">Support</li>
+                    <li><img class="svg" src="./svg/privacy.svg" alt="">Privacy</li>
                 </ul>
             </div>
         </div>
@@ -48,20 +43,57 @@
             <div class="one">
                 <div class="one-title">This are my projects</div>
                 <div class="projects">
-                    <div>project 1</div>
-                    <div>project 2</div>
-                    <div>project 3</div>
-                    <div>project 4</div>
-                    <div>project 5</div>
-                    <div>project 6</div>
+                    <div>
+                        Sign-Up Form
+                        <img src="./images/form.PNG" alt="">
+                        <a href="https://roobbs.github.io/sign-in/" target="_blank">See Project</a>
+                    </div>
+                    <div>Calculator
+                        <img src="./images/calc.PNG" alt="">
+                        <a href="https://roobbs.github.io/calculator/" target="_blank">See Project</a>
+                    </div>
+                    <div>Etch A Sketch
+                        <img src="./images/etch.PNG" alt="">
+                        <a href="https://roobbs.github.io/etch-a-sketch/" target="_blank">See Project</a>
+                    </div>
+                    <div>Rock Paper Scissors
+                        <img src="./images/rock.PNG" alt="">
+                        <a href="https://roobbs.github.io/rock-paper-scissors/" target="_blank">See Project</a>
+                    </div>
+                    <div>Landing Page
+                        <img src="./images/landing.PNG" alt="">
+                        <a href="https://roobbs.github.io/landing-page/" target="_blank">See Project</a>
+                    </div>
                 </div>
             </div>
             <div class="two">
-                <div>this another sidebar</div>
-                <div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                <div class="features">Knowlegde in: 
+                    <div class="Languages">
+                        <img src="./svg/linux.svg" alt="">
+                        <div>Linux Ubuntu</div>
+                    </div>
+                    <div class="Languages">
+                        <img src="./svg/windows.svg" alt="">
+                        <div>Microsoft Windows</div>
+                    </div>
+                    <div class="Languages">
+                        <img src="./svg/chrome.svg" alt="">
+                        <div>Chrome Dev Tools</div>
+                    </div>
+                </div>
+                <div class="features">For Learning:
+                    <div class="Languages">
+                        <img src="./svg/nodejs.svg" alt="">
+                        <div>Node.Js</div>
+                    </div>
+                    <div class="Languages">
+                        <img src="./svg/react.svg" alt="">
+                        <div>React</div>
+                    </div>
+                    <div class="Languages">
+                        <img src="./svg/python.svg" alt="">
+                        <div>Python</div>
+                    </div>
                 </div>
             </div>
         </main>
